--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
-    "@splidejs/splide": "splidejs/splide",
+    "@splidejs/vue-splide": "^0.5.18",
     "core-js": "^3.8.3",
     "vue": "^3.2.13",
     "vue-burger-menu": "1.0.9",
