--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "dependencies": {
     "@splidejs/vue-splide": "^0.5.18",
     "core-js": "^3.8.3",
+    "swiper": "^8.1.0",
     "vue": "^3.2.13",
     "vue-burger-menu": "1.0.9",
     "vue-router": "^4.0.3",
